# CAG-Bas-Rhin

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DOMAIN.md
src/: __main__.py  config.py
src/export/: to_raw_records.py
src/extraction/: commune_splitter.py  iron_age_filter.py  notice_parser.py  pdf_reader.py  pipeline.py  record_builder.py
src/storage/: loader.py  queries.py  schema.py
src/ui/: __main__.py  app.py  callbacks.py  layout.py
src/ui/assets/: cag.css
src/ui/components/: commune_map.py  notice_card.py  period_chart.py  type_chart.py
src/ui/pages/: carte.py  chronologie.py  notices.py  stats.py
tests/: test_commune_splitter.py  test_duckdb_storage.py  test_iron_age_filter.py  test_notice_parser.py  test_pdf_reader.py  test_record_builder.py
tests/fixtures/: sample_pages.json
